LPS-60845 lang keys

--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_cs.properties
@@ -1,4 +1,7 @@
 collaboration=Spolupráce (Automatic Translation)
+default-configuration-for-all-sites=Výchozí nastavení pro všechny stránky (Automatic Translation)
+default-configuration-for-application=Výchozí konfigurace pro aplikaci (Automatic Translation)
+default-settings-for-all-instances=Výchozí konfigurace pro všechny instance (Automatic Translation)
 factory=Továrna (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Nastavení systému (Automatic Translation)
 no-configurations-were-found=Nebyly nalezeny žádné konfigurace. (Automatic Translation)
