--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_da.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_da.properties
@@ -1,4 +1,7 @@
 collaboration=Samarbejde (Automatic Translation)
+default-configuration-for-all-sites=Standardindstillingerne for alle websteder (Automatic Translation)
+default-configuration-for-application=Standardkonfigurationen for ansøgning (Automatic Translation)
+default-settings-for-all-instances=Standardkonfigurationen for alle forekomster (Automatic Translation)
 factory=Fabrikken (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Systemindstillinger (Automatic Translation)
 no-configurations-were-found=Der blev ikke fundet nogen konfigurationer. (Automatic Translation)
