--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_es.properties
@@ -1,4 +1,7 @@
 collaboration=Colaboración (Automatic Translation)
+default-configuration-for-all-sites=Configuración predeterminada para todos los sitios (Automatic Translation)
+default-configuration-for-application=Configuración predeterminada para la aplicación (Automatic Translation)
+default-settings-for-all-instances=Configuración predeterminada para todas las instancias (Automatic Translation)
 factory=Fábrica (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Configuración del sistema (Automatic Translation)
 no-configurations-were-found=No hay configuraciones encontradas. (Automatic Translation)
