--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_et.properties
@@ -1,4 +1,7 @@
 collaboration=Koostöö (Automatic Translation)
+default-configuration-for-all-sites=Kõik saidid vaikesätted (Automatic Translation)
+default-configuration-for-application=Vaikekonfiguratsiooni rakenduse (Automatic Translation)
+default-settings-for-all-instances=Vaikekonfiguratsiooni kõigile eksemplaridele (Automatic Translation)
 factory=Tehase (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Süsteemi seaded (Automatic Translation)
 no-configurations-were-found=No koosseisud ei leitud. (Automatic Translation)
