--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fa.properties
@@ -1,4 +1,7 @@
 collaboration=همکاری (Automatic Translation)
+default-configuration-for-all-sites=تنظیمات پیش فرض برای همه سایت ها (Automatic Translation)
+default-configuration-for-application=تنظیمات پیش فرض برای برنامه (Automatic Translation)
+default-settings-for-all-instances=تنظیمات پیش فرض برای همه موارد (Automatic Translation)
 factory=کارخانه (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=تنظیمات سیستم (Automatic Translation)
 no-configurations-were-found=هیچ تنظیمات را نمی توان یافت نشد. (Automatic Translation)
