--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fr.properties
@@ -1,4 +1,7 @@
 collaboration=Collaboration (Automatic Translation)
+default-configuration-for-all-sites=Paramètres par défaut pour tous les Sites (Automatic Translation)
+default-configuration-for-application=Configuration par défaut pour l'Application (Automatic Translation)
+default-settings-for-all-instances=Configuration par défaut pour toutes les Instances (Automatic Translation)
 factory=Usine (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Panneau de configuration (Automatic Translation)
 no-configurations-were-found=Aucune des configurations ont été trouvées. (Automatic Translation)
