--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_hi_IN.properties
@@ -1,4 +1,7 @@
 collaboration=सहयोग (Automatic Translation)
+default-configuration-for-all-sites=सभी साइटों के लिए डिफ़ॉल्ट सेटिंग्स (Automatic Translation)
+default-configuration-for-application=अनुप्रयोग के लिए डिफ़ॉल्ट कॉन्फ़िगरेशन (Automatic Translation)
+default-settings-for-all-instances=सभी इंस्टेंस के लिए डिफ़ॉल्ट कॉन्फ़िगरेशन (Automatic Translation)
 factory=फैक्टरी (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=सिस्टम सेटिंग्स (Automatic Translation)
 no-configurations-were-found=कोई कॉन्फ़िगरेशन नहीं मिले। (Automatic Translation)
