--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_in.properties
@@ -1,4 +1,7 @@
 collaboration=Kolaborasi (Automatic Translation)
+default-configuration-for-all-sites=Pengaturan default untuk semua situs (Automatic Translation)
+default-configuration-for-application=Konfigurasi default untuk aplikasi (Automatic Translation)
+default-settings-for-all-instances=Konfigurasi default untuk semua contoh (Automatic Translation)
 factory=Pabrik (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Pengaturan sistem (Automatic Translation)
 no-configurations-were-found=Tidak ada konfigurasi yang ditemukan. (Automatic Translation)
