--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ja.properties
@@ -1,4 +1,7 @@
 collaboration=コラボレーション (Automatic Translation)
+default-configuration-for-all-sites=すべてのサイトの既定の設定 (Automatic Translation)
+default-configuration-for-application=アプリケーションの既定の構成 (Automatic Translation)
+default-settings-for-all-instances=すべてのインスタンスの既定の構成 (Automatic Translation)
 factory=工場 (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=システムの設定 (Automatic Translation)
 no-configurations-were-found=構成が見つかりませんでした。 (Automatic Translation)
