--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nb.properties
@@ -1,4 +1,7 @@
 collaboration=Samarbeid (Automatic Translation)
+default-configuration-for-all-sites=Standardinnstillingene for alle områder (Automatic Translation)
+default-configuration-for-application=Standardkonfigurasjonen for programmet (Automatic Translation)
+default-settings-for-all-instances=Standardkonfigurasjonen for alle forekomster (Automatic Translation)
 factory=Fabrikk (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Systeminnstillinger (Automatic Translation)
 no-configurations-were-found=Fant ingen konfigurasjoner. (Automatic Translation)
