--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sl.properties
@@ -1,4 +1,7 @@
 collaboration=Sodelovanje (Automatic Translation)
+default-configuration-for-all-sites=Privzete nastavitve za vsa mesta (Automatic Translation)
+default-configuration-for-application=Privzeta konfiguracija za uporabo (Automatic Translation)
+default-settings-for-all-instances=Privzeto konfiguracijo za vse primere (Automatic Translation)
 factory=Tovarne (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Sistemske nastavitve (Automatic Translation)
 no-configurations-were-found=Ne sestave je bilo ugotovljeno. (Automatic Translation)
