--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_tr.properties
@@ -1,4 +1,7 @@
 collaboration=İşbirliği (Automatic Translation)
+default-configuration-for-all-sites=Tüm siteler için varsayılan ayarlar (Automatic Translation)
+default-configuration-for-application=Uygulama için varsayılan yapılandırma (Automatic Translation)
+default-settings-for-all-instances=Tüm örnekleri için varsayılan yapılandırma (Automatic Translation)
 factory=Fabrika (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Sistem ayarları (Automatic Translation)
 no-configurations-were-found=Yok yapılandırmaları bulundu. (Automatic Translation)
