--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_uk.properties
@@ -1,4 +1,7 @@
 collaboration=Співпраця (Automatic Translation)
+default-configuration-for-all-sites=За замовчуванням для всіх сайтів (Automatic Translation)
+default-configuration-for-application=Типове налаштування для застосування (Automatic Translation)
+default-settings-for-all-instances=Типове налаштування для всіх екземплярів (Automatic Translation)
 factory=Фабрика (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Настройки системи (Automatic Translation)
 no-configurations-were-found=Немає конфігурації не знайдено. (Automatic Translation)
