--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,4 +1,7 @@
 collaboration=合作 (Automatic Translation)
+default-configuration-for-all-sites=所有站点的默认设置 (Automatic Translation)
+default-configuration-for-application=应用程序的默认配置 (Automatic Translation)
+default-settings-for-all-instances=所有实例的默认配置 (Automatic Translation)
 factory=工厂 (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=系统设置 (Automatic Translation)
 no-configurations-were-found=找不到配置。 (Automatic Translation)
