--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_zh_TW.properties
@@ -1,4 +1,7 @@
 collaboration=合作 (Automatic Translation)
+default-configuration-for-all-sites=所有網站的預設設置 (Automatic Translation)
+default-configuration-for-application=應用程式的預設配置 (Automatic Translation)
+default-settings-for-all-instances=所有實例的預設配置 (Automatic Translation)
 factory=工廠 (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=系統設置 (Automatic Translation)
 no-configurations-were-found=找不到配置。 (Automatic Translation)
