--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ar.properties
@@ -1,4 +1,7 @@
 collaboration=التعاون (Automatic Translation)
+default-configuration-for-all-sites=الإعدادات الافتراضية لكافة المواقع (Automatic Translation)
+default-configuration-for-application=التكوين الافتراضي للتطبيق (Automatic Translation)
+default-settings-for-all-instances=التكوين الافتراضي لكافة مثيلات (Automatic Translation)
 factory=مصنع (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=إعدادات النظام (Automatic Translation)
 no-configurations-were-found=تم العثور على لا تكوينات. (Automatic Translation)
