--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_bg.properties
@@ -1,4 +1,7 @@
 collaboration=Сътрудничество (Automatic Translation)
+default-configuration-for-all-sites=Настройки по подразбиране за всички сайтове (Automatic Translation)
+default-configuration-for-application=Конфигурацията по подразбиране за приложение (Automatic Translation)
+default-settings-for-all-instances=Конфигурацията по подразбиране за всички екземпляри (Automatic Translation)
 factory=Фабрика (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Системни настройки (Automatic Translation)
 no-configurations-were-found=Намерени са не конфигурации. (Automatic Translation)
