--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ca.properties
@@ -1,4 +1,7 @@
 collaboration=Col·laboració (Automatic Translation)
+default-configuration-for-all-sites=Configuració per defecte de tots els llocs (Automatic Translation)
+default-configuration-for-application=Configuració d'omissió per a aplicació (Automatic Translation)
+default-settings-for-all-instances=Configuració per defecte per a totes les instàncies (Automatic Translation)
 factory=Fàbrica (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Configuració del sistema (Automatic Translation)
 no-configurations-were-found=Es trobaren cap configuracions. (Automatic Translation)
