--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_de.properties
@@ -1,4 +1,7 @@
 collaboration=Zusammenarbeit (Automatic Translation)
+default-configuration-for-all-sites=Standardeinstellungen für alle Standorte (Automatic Translation)
+default-configuration-for-application=Standardkonfiguration für Anwendung (Automatic Translation)
+default-settings-for-all-instances=Standardkonfiguration für alle Instanzen (Automatic Translation)
 factory=Fabrik (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=System-Einstellungen (Automatic Translation)
 no-configurations-were-found=Keine Konfigurationen wurden gefunden. (Automatic Translation)
