--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_el.properties
@@ -1,4 +1,7 @@
 collaboration=Συνεργασία (Automatic Translation)
+default-configuration-for-all-sites=Προεπιλεγμένες ρυθμίσεις για όλες τις τοποθεσίες (Automatic Translation)
+default-configuration-for-application=Προεπιλεγμένων ρυθμίσεων για την εφαρμογή (Automatic Translation)
+default-settings-for-all-instances=Προεπιλεγμένη ρύθμιση παραμέτρων για όλες τις εμφανίσεις (Automatic Translation)
 factory=Εργοστάσιο (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Ρυθμίσεις του συστήματος (Automatic Translation)
 no-configurations-were-found=Διαμορφώσεις δεν βρέθηκαν. (Automatic Translation)
