--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_fi.properties
@@ -1,4 +1,7 @@
 collaboration=Yhteistyö (Automatic Translation)
+default-configuration-for-all-sites=Oletusasetukset-sivustoille (Automatic Translation)
+default-configuration-for-application=Sovelluksen oletusasetukset (Automatic Translation)
+default-settings-for-all-instances=Kaikki oletusasetukset (Automatic Translation)
 factory=Tehdas (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Järjestelmäasetukset (Automatic Translation)
 no-configurations-were-found=No kokoonpanot ei löytynyt. (Automatic Translation)
