--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_hu.properties
@@ -1,4 +1,7 @@
 collaboration=Együttműködés (Automatic Translation)
+default-configuration-for-all-sites=Minden webhely alapértelmezett beállításai (Automatic Translation)
+default-configuration-for-application=Alapértelmezések alkalmazása (Automatic Translation)
+default-settings-for-all-instances=Alapértelmezett beállítás minden esetben a (Automatic Translation)
 factory=Gyári (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Rendszerbeállítások (Automatic Translation)
 no-configurations-were-found=Nem konfigurációk találtak. (Automatic Translation)
