--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_it.properties
@@ -1,4 +1,7 @@
 collaboration=Collaborazione (Automatic Translation)
+default-configuration-for-all-sites=Impostazioni predefinite per tutti i siti (Automatic Translation)
+default-configuration-for-application=Configurazione predefinita per l'applicazione (Automatic Translation)
+default-settings-for-all-instances=Configurazione predefinita per tutte le istanze (Automatic Translation)
 factory=Fabbrica (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Impostazioni di sistema (Automatic Translation)
 no-configurations-were-found=Nessuna configurazione sono stata trovata. (Automatic Translation)
