--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_iw.properties
@@ -1,4 +1,7 @@
 collaboration=שיתוף פעולה (Automatic Translation)
+default-configuration-for-all-sites=הגדרות ברירת המחדל עבור כל האתרים (Automatic Translation)
+default-configuration-for-application=תצורת ברירת המחדל עבור יישום (Automatic Translation)
+default-settings-for-all-instances=תצורת ברירת המחדל עבור כל המופעים (Automatic Translation)
 factory=מפעל (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=הגדרות מערכת (Automatic Translation)
 no-configurations-were-found=תצורות לא נמצאו. (Automatic Translation)
