--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ko.properties
@@ -1,4 +1,7 @@
 collaboration=공동 작업 (Automatic Translation)
+default-configuration-for-all-sites=모든 사이트에 대 한 기본 설정 (Automatic Translation)
+default-configuration-for-application=응용 프로그램에 대 한 기본 구성 (Automatic Translation)
+default-settings-for-all-instances=모든 인스턴스에 대 한 기본 구성 (Automatic Translation)
 factory=공장 (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=시스템 설정 (Automatic Translation)
 no-configurations-were-found=없음 구성은 발견 됐다. (Automatic Translation)
