--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_lo.properties
@@ -1,4 +1,7 @@
 collaboration=Collaboration (Automatic Copy)
+default-configuration-for-all-sites=Default Settings for All Sites (Automatic Copy)
+default-configuration-for-application=Default Configuration for Application (Automatic Copy)
+default-settings-for-all-instances=Default Configuration for All Instances (Automatic Copy)
 factory=Factory (Automatic Copy)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=System Settings (Automatic Copy)
 no-configurations-were-found=No configurations were found. (Automatic Copy)
