--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_lt.properties
@@ -1,4 +1,7 @@
 collaboration=Bendradarbiavimas (Automatic Translation)
+default-configuration-for-all-sites=Numatytuosius parametrus visiems puslapiams (Automatic Translation)
+default-configuration-for-application=Numatytoji konfigūracija taikymo (Automatic Translation)
+default-settings-for-all-instances=Numatytąją konfigūraciją, visais atvejais (Automatic Translation)
 factory=Gamykla (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Sistemos parametrai (Automatic Translation)
 no-configurations-were-found=Nerasta jokių konfigūracijų. (Automatic Translation)
