--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nl_BE.properties
@@ -1,4 +1,7 @@
 collaboration=Samenwerking (Automatic Translation)
+default-configuration-for-all-sites=Standaardinstellingen voor alle Sites (Automatic Translation)
+default-configuration-for-application=Standaardconfiguratie voor toepassing (Automatic Translation)
+default-settings-for-all-instances=Standaardconfiguratie voor alle instanties (Automatic Translation)
 factory=Fabriek (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Systeeminstellingen (Automatic Translation)
 no-configurations-were-found=Geen configuraties werden gevonden. (Automatic Translation)
