--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_pl.properties
@@ -1,4 +1,7 @@
 collaboration=Współpraca (Automatic Translation)
+default-configuration-for-all-sites=Ustawienia domyślne dla wszystkich stron (Automatic Translation)
+default-configuration-for-application=Domyślnej konfiguracji dla aplikacji (Automatic Translation)
+default-settings-for-all-instances=Domyślna konfiguracja dla wszystkich wystąpień (Automatic Translation)
 factory=Fabryka (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Ustawienia systemu (Automatic Translation)
 no-configurations-were-found=Stwierdzono nie konfiguracji. (Automatic Translation)
