--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_pt_PT.properties
@@ -1,4 +1,7 @@
 collaboration=Colaboração (Automatic Translation)
+default-configuration-for-all-sites=Configurações padrão para todos os Sites (Automatic Translation)
+default-configuration-for-application=Padrão de configuração de aplicativo (Automatic Translation)
+default-settings-for-all-instances=Configuração padrão para todas as instâncias (Automatic Translation)
 factory=Fábrica (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Configurações do sistema (Automatic Translation)
 no-configurations-were-found=Não há configurações foram encontradas. (Automatic Translation)
