--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ro.properties
@@ -1,4 +1,7 @@
 collaboration=Colaborare (Automatic Translation)
+default-configuration-for-all-sites=Setările implicite pentru toate site-urile (Automatic Translation)
+default-configuration-for-application=Configuraţia implicită pentru aplicarea (Automatic Translation)
+default-settings-for-all-instances=Configuraţia implicită pentru toate instanţele (Automatic Translation)
 factory=Fabrica (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Setări de sistem (Automatic Translation)
 no-configurations-were-found=Nu configuraţii au fost găsite. (Automatic Translation)
