--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ru.properties
@@ -1,4 +1,7 @@
 collaboration=Сотрудничество (Automatic Translation)
+default-configuration-for-all-sites=Параметры по умолчанию для всех сайтов (Automatic Translation)
+default-configuration-for-application=Конфигурация по умолчанию для приложения (Automatic Translation)
+default-settings-for-all-instances=Конфигурация по умолчанию для всех экземпляров (Automatic Translation)
 factory=Фабрика (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Параметры системы (Automatic Translation)
 no-configurations-were-found=Нет конфигураций были найдены. (Automatic Translation)
