--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sk.properties
@@ -1,4 +1,7 @@
 collaboration=Spolupráca (Automatic Translation)
+default-configuration-for-all-sites=Predvolené nastavenie pre všetky lokality (Automatic Translation)
+default-configuration-for-application=Predvolená konfigurácia pre aplikáciu (Automatic Translation)
+default-settings-for-all-instances=Predvolená konfigurácia pre všetky inštancie (Automatic Translation)
 factory=Továreň (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Nastavenie systému (Automatic Translation)
 no-configurations-were-found=Nenašli sa žiadne konfigurácie. (Automatic Translation)
