--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_sv.properties
@@ -1,4 +1,7 @@
 collaboration=Samarbete (Automatic Translation)
+default-configuration-for-all-sites=Standardinställningar för alla platser (Automatic Translation)
+default-configuration-for-application=Standardkonfigurationen för ansökan (Automatic Translation)
+default-settings-for-all-instances=Standardkonfigurationen för alla instanser (Automatic Translation)
 factory=Fabriken (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Systeminställningar (Automatic Translation)
 no-configurations-were-found=Inga konfigurationer hittades. (Automatic Translation)
