--- a/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/configuration-admin/configuration-admin-web/src/main/resources/content/Language_vi.properties
@@ -1,4 +1,7 @@
 collaboration=Nghiên cứu khoa học (Automatic Translation)
+default-configuration-for-all-sites=Cài đặt mặc định cho tất cả các trang web (Automatic Translation)
+default-configuration-for-application=Cấu hình mặc định cho ứng dụng (Automatic Translation)
+default-settings-for-all-instances=Cấu hình mặc định cho tất cả trường hợp (Automatic Translation)
 factory=Nhà máy (Automatic Translation)
 javax.portlet.title.com_liferay_configuration_admin_web_portlet_ConfigurationAdminPortlet=Thiết đặt hệ thống (Automatic Translation)
 no-configurations-were-found=Không có cấu hình đã được tìm thấy. (Automatic Translation)
