--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_nl.properties
@@ -1,5 +1,5 @@
 data-providers=Gegevensleveranciers (Automatic Translation)
-ddl.form.web.configuration.name=Forms-toepassing (Automatic Translation)
+ddl.form.web.configuration.name=Formulieren (Automatic Translation)
 displaying-form=Formulier weergeven (Automatic Translation)
 enable-email-notification-for-each-form-submission=Schakel kennisgeving in e-mail voor elke indiening formulier. (Automatic Translation)
 field-name-is-already-in-use=Veldnaam is al in gebruik. (Automatic Translation)
