--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ru.properties
@@ -1,5 +1,5 @@
 data-providers=Поставщики данных (Automatic Translation)
-ddl.form.web.configuration.name=Приложение форм (Automatic Translation)
+ddl.form.web.configuration.name=Формы (Automatic Translation)
 displaying-form=Displaying Form (Automatic Copy)
 enable-email-notification-for-each-form-submission=Включите уведомление по электронной почте для каждой формы представления. (Automatic Translation)
 field-name-is-already-in-use=Поле имя уже используется. (Automatic Translation)
