--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_tr.properties
@@ -1,5 +1,5 @@
 data-providers=Veri sağlayıcıları (Automatic Translation)
-ddl.form.web.configuration.name=Forms uygulaması (Automatic Translation)
+ddl.form.web.configuration.name=Formlar (Automatic Translation)
 displaying-form=Displaying Form (Automatic Copy)
 enable-email-notification-for-each-form-submission=Her form gönderme e-posta bildirimini etkinleştirmek. (Automatic Translation)
 field-name-is-already-in-use=Alan adı zaten kullanımda. (Automatic Translation)
