--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_vi.properties
@@ -1,5 +1,5 @@
 data-providers=Nhà cung cấp dữ liệu (Automatic Translation)
-ddl.form.web.configuration.name=Các hình thức ứng dụng (Automatic Translation)
+ddl.form.web.configuration.name=Hình thức (Automatic Translation)
 displaying-form=Displaying Form (Automatic Copy)
 enable-email-notification-for-each-form-submission=Sử thông báo email mỗi hình thức nộp. (Automatic Translation)
 field-name-is-already-in-use=Tên trường hiện đang sử dụng. (Automatic Translation)
