--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_cs.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Pole název je již používán. (Automatic Transla
 form-description=Popis formuláře (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Forma (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Záznam formuláře (Automatic Translation)
 new-form=Nový formulář (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=No forms were found. (Automatic Copy)
