--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_el.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Όνομα πεδίου είναι ήδη σε χρ
 form-description=Περιγραφή φόρμας (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Μορφή (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Φόρμα εγγραφής (Automatic Translation)
 new-form=Νέα μορφή (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=Μορφές δεν βρέθηκαν. (Automatic Translation)
