--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_eu.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Field name is already in use. (Automatic Copy)
 form-description=Form Description (Automatic Copy)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Form (Automatic Copy)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Form Record (Automatic Copy)
 new-form=New Form (Automatic Copy)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=No forms were found. (Automatic Copy)
