--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_fr.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Nom de domaine est déjà utilisé. (Automatic Tran
 form-description=Description de la forme (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Formulaire (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Formulaire enregistrement (Automatic Translation)
 new-form=Nouvelle forme (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=Aucun formulaire n'ont été trouvés. (Automatic Translation)
