--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ja.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=フィールド名は既に使用中です。 (Auto
 form-description=フォームの説明 (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=フォーム (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=フォームのレコード (Automatic Translation)
 new-form=新しいフォーム (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=フォームが見つかりませんでした。 (Automatic Translation)
