--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_sl.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Ime polja je že v uporabi. (Automatic Translation)
 form-description=Opis obrazca (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Obrazec (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Oblika zapisa (Automatic Translation)
 new-form=Nov obrazec (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=No forms were found. (Automatic Copy)
