--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_zh_CN.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=字段名称已在使用。 (Automatic Translation)
 form-description=窗体说明 (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=窗体 (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=窗体记录 (Automatic Translation)
 new-form=新窗体 (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=没有形式被发现。 (Automatic Translation)
