--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_zh_TW.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=欄位名稱已在使用。 (Automatic Translation)
 form-description=表單說明 (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=表單 (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=表單記錄 (Automatic Translation)
 new-form=新表單 (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=沒有形式被發現。 (Automatic Translation)
