--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_fi.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Kenttänimi on jo käytössä. (Automatic Translati
 form-description=Lomakkeen kuvaus (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Lomake (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Lomakkeen tietueen (Automatic Translation)
 new-form=Uusi lomake (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=No forms were found. (Automatic Copy)
