--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_it.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Nome del campo è già in uso. (Automatic Translati
 form-description=Descrizione del modulo (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Modulo (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Record della maschera (Automatic Translation)
 new-form=Nuovo modulo (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=Sono state trovate senza forme. (Automatic Translation)
