--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_ko.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=필드 이름이 이미 사용 중에서입니다. 
 form-description=양식 설명 (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=양식 (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=폼 레코드 (Automatic Translation)
 new-form=새 양식 (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=아니 양식으로 나타났다. (Automatic Translation)
