--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_nl_BE.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Veldnaam is al in gebruik. (Automatic Translation)
 form-description=Beschrijving van formulier (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Formulier (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Formulier Record (Automatic Translation)
 new-form=Nieuw formulier (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=Geen formulieren werden gevonden. (Automatic Translation)
