--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/content/Language_pt_PT.properties
@@ -6,6 +6,7 @@ field-name-is-already-in-use=Nome do campo já está em uso. (Automatic Translat
 form-description=Descrição do formulário (Automatic Translation)
 form-published-at-x=Form Published at: {0} (Automatic Copy)
 javax.portlet.title.com_liferay_dynamic_data_lists_form_web_portlet_DDLFormPortlet=Formulário (Automatic Translation)
+model.resource.com.liferay.dynamic.data.lists.model.DDLFormRecord=Formulário de registro (Automatic Translation)
 new-form=Nova forma (Automatic Translation)
 new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-forms-were-found=Não há formas foram encontradas. (Automatic Translation)
